Refresh swagger docs
